scss/app.scss
@import 'positions';

#forkMe {
  display: none;
  position: absolute;
  top: 0px;
  left: 0px;
  z-index: 9999999;
  @media (min-width: 1250px) {
    display: block;
  }
}

html {
  transition: opacity 0.3s;
  font-size: 15px;
  &.fonts-loaded #__next {
    visibility: visible;
    opacity: 1;
  }
  @media (max-width: 600px) {
    font-size: 13px;
  }

  @media (max-width: 300px) {
    font-size: 12px;
  }
}

html body div#nprogress div.bar {
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  z-index: 99999 !important;
  background: $salmon !important;
}

[data-whatintent='mouse'] *:focus,
[data-whatintent='mouse'] * {
  outline-color: transparent !important;
  outline-style: none !important;
  outline-offset: 0 !important;
  outline-width: 0 !important;
}

.svgblock {
  display: block;
}

html,
body,
#__next {
  min-height: 100vh !important;
}

#__next {
  visibility: hidden;
  opacity: 0;
  display: flex;
  flex-direction: column;
}

main#main-app {
  padding: 0 10px;
  flex: 1;
  width: 100%;
  background-color: $p-bg-color;
}

body {
  padding: 0;
  margin: 0;
  color: $p-txt-color;
  background-color: $p-bg-color;
  overflow-y: scroll;
  font-family: ABeeZee, sans-serif;
}

.container {
  max-width: 960px;
  margin: 0 auto;
}

body * {
  box-sizing: border-box;
}

h1 {
  margin: 0;
  font-size: 2.5rem;
  font-family: Karma, sans-serif;
  font-weight: 700;
}

h2 {
  margin: 0;
  font-size: 2.2rem;
  font-weight: 600;
  text-align: center;
}

h3 {
  font-size: 1.75rem;
  text-align: center;
  font-weight: 500;
}

h4 {
  font-size: 1.5rem;
  font-weight: 400;
  text-align: center;
}

h5 {
  font-weight: 400;
  font-size: 1.15rem;
}

hr.striped {
  width: 100%;
  height: 30px;
  max-width: 100%;
  border: 0;
}

.note {
  color: #7f8c8d;
  font-size: rem(13px);
  font-style: italic;
  line-height: normal;
  font-weight: normal !important;
}

p {
  line-height: 1.3em;
}

hr.striped,
.skill-title {
  background: url('/static/stripes.png') center left repeat-x;
}

.home-section {
  .content-row {
    text-align: center;
    padding: 20px 10px;
    width: 100%;
  }

  .profile-picture {
    border-radius: 50%;
    width: 75px;
    height: 75px;
    display: block;
    text-align: center;
    margin: 10px auto;
    position: relative;
  }

  h3 {
    margin-bottom: 40px;
  }

  .title {
    padding: 5px;
  }

  hr {
    width: 300px;
  }

  .profile-resume {
    text-align: center;
    padding: 30px;
    max-width: 800px;
    margin: 0 auto;
  }

  .experience-container {
    display: flex;
    flex-flow: column nowrap;
    align-items: center;
    a {
      display: block;
      margin-bottom: 20px;
    }

    p {
      b {
        font-weight: 700;
      }
      &:last-child {
        font-size: rem(14px);
        color: transparentize(#576574, 0.3);
        opacity: 0.8;
        padding: 15px 5px 0px;

        .vuejs svg,
        .python {
          width: 13px;
          height: 13px;
        }
      }
    }
  }
}

.skills-section {
  .skill-title {
    width: 100%;
    margin: 0 auto;

    & > h4 {
      background-color: $p-bg-color;
      text-align: center;
      padding: 0 20px;
      color: $p-txt-color;
      margin: 30px 0;
    }
  }

  .skills-list {
    display: grid;
    justify-content: center;
    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
    grid-gap: 18px 5px;
    margin-bottom: 10px;

    & > li {
      width: 100%;
      padding: 4px 10px;
      text-align: center;
    }

    img.skills-img {
      margin: 0 auto;
      display: block;
      height: 40px;
      padding-bottom: 4px;
      box-sizing: content-box;
    }

    .skill-article {
      &-header {
        text-align: center;

        &-title {
          color: #222;
          text-align: center;
          margin: 20px 0;
          text-transform: uppercase;
        }

        &-note {
          display: block;
          text-align: center;
        }
      }

      &-footer {
        margin-top: 10px;

        &-list {
          text-align: center;
          width: 100%;
          color: $p-txt-color;

          & > li {
            border-bottom: 1px dashed rgba(0, 0, 0, 0.1);
            padding: 5px 0;
          }
        }
      }
    }

    @media only screen and (min-width: 600px) {
      .skill-article-footer-list {
        text-align: left;
      }
      grid-template-columns: repeat(auto-fill, minmax(150px, 220px));
    }

    &.framworks-list,
    &.technos-list {
      .skill-article-header-note {
        text-align: center;
      }
    }
  }
}

.productions-section {
  .productions-list {
    display: grid;
    justify-content: center;
    grid-template-columns: repeat(auto-fill, minmax(220px, auto));
    grid-gap: 18px 15px;
    margin-bottom: 10px;

    & > li {
      @extend %p-shad;
      border-radius: 10px;
      overflow: hidden;
      border: 1px solid #dedede;
    }

    .production-article {
      width: 100%;

      &-header {
        width: 100%;
        overflow: hidden;
        position: relative;
        padding-bottom: 56.25%;
        height: 0;

        &-cover {
          display: block;
          width: 100%;
          z-index: 1;
        }

        &-overlay {
          z-index: 2;
          position: absolute;
          opacity: 0;
          visibility: hidden;
          transition-property: opacity, visibility;
          transition-duration: 0.3s;
          transition-timing-function: ease;
          width: 100%;
          height: 100%;
          background-color: rgba(255, 255, 255, 0.4);
          top: 0;
          left: 0;
          right: 0;
          bottom: 0;

          & > a {
            position: absolute;
            left: 50%;
            top: 50%;
            transform: translate(-50%, -50%) scale(0);
            padding: 10px;
            transition: transform 0.3s ease 0s;
            @include outlined(transform);
            background-color: rgba(0, 0, 0, 0.4);
            border-radius: 50%;
            color: #fff;
            cursor: pointer;
          }
        }
      }

      &:hover,
      &:focus,
      &:focus-within {
        .production-article-header-overlay {
          opacity: 1;
          visibility: visible;
          & > a {
            transform: translate(-50%, -50%) scale(1);
          }
        }
      }

      &-footer {
        width: 100%;
        text-align: center;
        padding: 9px 0;

        &-title {
          margin-bottom: 0.5em;
        }

        &-subtitle {
          text-align: center;
        }
      }
    }
  }
}

.training-section {
  .training-list {
    display: grid;
    grid-template-columns: 1fr;

    & > li {
      width: 100%;
      padding: 20px 10px;
      &:not(:last-child) {
        border-bottom: 1px dashed rgba(0, 0, 0, 0.3);
      }
    }

    .training-article {
      width: 100%;
      display: grid;
      grid-template-rows: 200px auto;

      &-thumbnail-side {
        display: flex;
        justify-content: center;
        align-items: center;

        & > img {
          max-width: 100%;
          display: block;
        }
      }

      &-description-side {
        display: flex;
        flex-flow: column nowrap;
        flex: 1;

        .training-article-date {
          color: $p-txt-color;
          @include truncate(100%);
          span {
            display: inline-block;
            vertical-align: middle;
          }
          svg {
            vertical-align: middle;
            margin-right: 7px;
            width: 13px;
          }
        }

        .training-article-title {
          padding: 15px 0;
          color: $p-txt-color;
          text-align: left;
        }

        ul.training-article-list-texts {
          color: #445;
          width: 100%;
          & > li {
            line-height: 22px;
          }
        }
      }
    }
  }
}

